--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <section>
         <h2 data-testid="myTrack">Frontend</h2>
     </section>
+    <secction>
+        <a href="https://github.com/misterabass/ZuriFirstTask" data-testid="githubURL"></a>  
+    </secction>
 </main>
 </body>
 </html>
