--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h2 data-testid="currentUTCTime">UTC Time (milliseconds)</h2>
     </section>
     <section>
-        <h2 data-testid="myTrack">Frontend</h2>
+        <h2 data-testid="myTrack">My Track</h2>
     </section>
     <secction>
         <a href="https://github.com/misterabass/ZuriFirstTask" data-testid="githubURL">Link To Respository</a>  
