--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-    <h1 data-testid='slackUserName'>misterabass</h1>
+    <h1 data-testid='slackUserName'>Username</h1>
     <img src="my-slack-profile-picture.JPG" alt="misterabass" data-testid="slackDisplayImage">
 </header>
 <main>
