--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 </head>
 <body>
     <header>
-    <h1 data-testid='slackUserName'>Username</h1>
+    <h1 data-testid='slackUserName'>Username:</h1>
     <img src="my-slack-profile-picture.JPG" alt="misterabass" data-testid="slackDisplayImage">
 </header>
 <main>
     <section>
-        <h2 data-testid="currentDayOfTheWeek">Day of the week</h2>
+        <h2 data-testid="currentDayOfTheWeek">Day of the week:</h2>
     </section>
     <section>
-        <h2 data-testid="currentUTCTime">UTC Time (milliseconds)</h2>
+        <h2 data-testid="currentUTCTime">UTC Time (milliseconds):</h2>
     </section>
     <section>
-        <h2 data-testid="myTrack">My Track</h2>
+        <h2 data-testid="myTrack">My Track:</h2>
     </section>
     <secction>
         <a href="https://github.com/misterabass/ZuriFirstTask" data-testid="githubURL">Link To Respository</a>  
